--- a/BulkyBook.DataAccess/BulkyBook.DataAccess.csproj
+++ b/BulkyBook.DataAccess/BulkyBook.DataAccess.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BulkyBook.Models\BulkyBook.Models.csproj" />
+  </ItemGroup>
+
 </Project>
